# V.O.S.A

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  tmp_out.txt
.github/workflows/: ci.yml  release.yml
examples/: grid_scan.vosa  hello_world.vosa  parallel_survey.vosa  perimeter_scan.vosa  photo_survey.vosa  reactive_mission.vosa  sensor_mission.vosa  sim_mission.vosa  trigger_test.vosa
explorer/: explorer.py
src/: error.rs  lib.rs  main.rs
src/hw_bridge/: mod.rs  ros2.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/runtime/: mod.rs
src/safety/: mod.rs
