[package]
name = "vosa"
version = "0.1.0"
edition = "2021"
description = "V.O.S.A. — Vectorized Operational Safety Autonomy DSL for autonomous drones"
license = "Apache-2.0"
repository = "https://github.com/YOUR_USERNAME/vosa"
keywords = ["drone", "dsl", "autonomy", "safety", "robotics"]
categories = ["command-line-utilities", "parser-implementations"]

[[bin]]
name = "vosa"
path = "src/main.rs"

[lib]
name = "vosa"
path = "src/lib.rs"

[features]
# Enable the ROS 2 / MAVROS bridge (requires Npcap SDK on Windows).
# Build with: cargo build --release --features ros2
ros2 = ["dep:ros2-client"]

[dependencies]
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
mavlink = "0.17.1"
ros2-client = { version = "0.8.2", optional = true }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
